# yippy

./: .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.org  compile_commands.json
examples/: factorial.yy  fizzbuzz.yy
include/: builtins.h  error.h  eval.h  mem.h  mpc.h  types.h  wasm.h  yippy.h
src/: .yippy_hsts  builtins.c  builtins.h  error.c  error.h  eval.c  eval.h  gc.c  line.cc  linenoise.c  linenoise.h  main.c  main.rs  parser.c  parser.h  types.c  types.h  wasm.c  yippy.c  yippy.h
stdlib/: 00_prelude.yy  01_core.yy  02_list.yy  02_math.yy  03_strings.yy  core.yy  list.yy  math.yy  prelude.yy
tests/: .yippy_hsts  arithmetic.sh  bitwise.sh  inline_eval.sh  logical.sh  relational.sh  tests  unary.sh
